05_services/service.yml
apiVersion: v1
kind: Service
metadata:
  name: poddoz-svc
spec:
  selector:
    app: poddoz
  ports:
  - port: 80
    targetPort: 8080
