05_services/service_IP.yml
apiVersion: v1
kind: Service
metadata:
  name: poddoz-svc
spec:
  selector:
    app: poddoz
  ports:
  - port: 80
    targetPort: 8080
  externalIPs:
  - 172.1.1.10
